Cli: ensure JDK11 compatibility