@@ -28,6 +28,7 @@ import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -47,7 +48,7 @@ class AppsCmdTest extends CommandTestBase {
                 AbstractDeployApplicationCmd.buildZip(langstream.toFile(), System.out::println);
 
         wireMock.register(
-                WireMock.post("/api/applications/%s/my-app".formatted(TENANT))
+                WireMock.post(String.format("/api/applications/%s/my-app", TENANT))
                         .withMultipartRequestBody(
                                 aMultipart("app")
                                         .withBody(binaryEqualTo(Files.readAllBytes(zipFile))))
@@ -84,15 +85,16 @@ class AppsCmdTest extends CommandTestBase {
         Path langstream = Files.createTempDirectory("langstream");
         Files.createDirectories(Path.of(langstream.toFile().getAbsolutePath(), "java", "lib"));
         final String configurationYamlContent =
-                """
-                configuration:
-                  dependencies:
-                    - name: "PostGRES JDBC Driver"
-                      url: "%s"
-                      sha512sum: "%s"
-                      type: "java-library"
-                """
-                        .formatted(wireMockBaseUrl + "/local/get-dependency.jar", fileContentSha);
+                ("configuration:\n"
+                        + "  dependencies:\n"
+                        + "    - name: \"PostGRES JDBC Driver\"\n"
+                        + "      url: \""
+                        + wireMockBaseUrl
+                        + "/local/get-dependency.jar\"\n"
+                        + "      sha512sum: \""
+                        + fileContentSha
+                        + "\"\n"
+                        + "      type: \"java-library\"\n");
         Files.writeString(
                 Path.of(langstream.toFile().getAbsolutePath(), "configuration.yaml"),
                 configurationYamlContent);
@@ -106,7 +108,7 @@ class AppsCmdTest extends CommandTestBase {
         final Path zipFile =
                 AbstractDeployApplicationCmd.buildZip(langstream.toFile(), System.out::println);
         wireMock.register(
-                WireMock.post("/api/applications/%s/my-app".formatted(TENANT))
+                WireMock.post(String.format("/api/applications/%s/my-app", TENANT))
                         .withMultipartRequestBody(
                                 aMultipart("app")
                                         .withBody(binaryEqualTo(Files.readAllBytes(zipFile))))
@@ -141,7 +143,7 @@ class AppsCmdTest extends CommandTestBase {
         final Path zipFile =
                 AbstractDeployApplicationCmd.buildZip(langstream.toFile(), System.out::println);
         wireMock.register(
-                WireMock.patch(urlEqualTo("/api/applications/%s/my-app".formatted(TENANT)))
+                WireMock.patch(urlEqualTo(String.format("/api/applications/%s/my-app", TENANT)))
                         .withMultipartRequestBody(
                                 aMultipart("app")
                                         .withBody(binaryEqualTo(Files.readAllBytes(zipFile))))
@@ -171,7 +173,7 @@ class AppsCmdTest extends CommandTestBase {
         final String instance = createTempFile("instance: {}");
 
         wireMock.register(
-                WireMock.patch(urlEqualTo("/api/applications/%s/my-app".formatted(TENANT)))
+                WireMock.patch(urlEqualTo(String.format("/api/applications/%s/my-app", TENANT)))
                         .withMultipartRequestBody(
                                 aMultipart("instance").withBody(equalTo("instance: {}")))
                         .willReturn(WireMock.ok("{ \"name\": \"my-app\" }")));
@@ -190,7 +192,7 @@ class AppsCmdTest extends CommandTestBase {
         final Path zipFile =
                 AbstractDeployApplicationCmd.buildZip(langstream.toFile(), System.out::println);
         wireMock.register(
-                WireMock.patch(urlEqualTo("/api/applications/%s/my-app".formatted(TENANT)))
+                WireMock.patch(urlEqualTo(String.format("/api/applications/%s/my-app", TENANT)))
                         .withMultipartRequestBody(
                                 aMultipart("app")
                                         .withBody(binaryEqualTo(Files.readAllBytes(zipFile))))
@@ -219,7 +221,7 @@ class AppsCmdTest extends CommandTestBase {
         final Path zipFile =
                 AbstractDeployApplicationCmd.buildZip(langstream.toFile(), System.out::println);
         wireMock.register(
-                WireMock.patch(urlEqualTo("/api/applications/%s/my-app".formatted(TENANT)))
+                WireMock.patch(urlEqualTo(String.format("/api/applications/%s/my-app", TENANT)))
                         .withMultipartRequestBody(
                                 aMultipart("app")
                                         .withBody(binaryEqualTo(Files.readAllBytes(zipFile))))
@@ -236,7 +238,7 @@ class AppsCmdTest extends CommandTestBase {
     public void testUpdateSecrets() throws Exception {
         final String secrets = createTempFile("secrets: []");
         wireMock.register(
-                WireMock.patch(urlEqualTo("/api/applications/%s/my-app".formatted(TENANT)))
+                WireMock.patch(urlEqualTo(String.format("/api/applications/%s/my-app", TENANT)))
                         .withMultipartRequestBody(
                                 aMultipart("secrets").withBody(equalTo("secrets: []")))
                         .willReturn(WireMock.ok("{ \"name\": \"my-app\" }")));
@@ -249,814 +251,22 @@ class AppsCmdTest extends CommandTestBase {
     @Test
     public void testGet() throws Exception {
         final String jsonValue =
-                """
-                {
-                  "application-id" : "test",
-                  "application" : {
-                    "resources" : {
-                      "OpenAI Azure configuration" : {
-                        "id" : null,
-                        "name" : "OpenAI Azure configuration",
-                        "type" : "open-ai-configuration",
-                        "configuration" : {
-                          "access-key" : "{{ secrets.open-ai.access-key }}",
-                          "provider" : "azure",
-                          "url" : "{{ secrets.open-ai.url }}"
-                        }
-                      }
-                    },
-                    "modules" : [ {
-                      "id" : "default",
-                      "pipelines" : [ {
-                        "id" : "extract-text",
-                        "module" : "default",
-                        "name" : "Extract and manipulate text",
-                        "resources" : {
-                          "parallelism" : 1,
-                          "size" : 1
-                        },
-                        "errors" : {
-                          "retries" : 0,
-                          "on-failure" : "fail"
-                        },
-                        "agents" : [ {
-                          "id" : "extract-text-s3-source-1",
-                          "name" : "Read from S3",
-                          "type" : "s3-source",
-                          "input" : null,
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-text-extractor-2",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "access-key" : "{{{secrets.s3-credentials.access-key}}}",
-                            "bucketName" : "{{{secrets.s3-credentials.bucket-name}}}",
-                            "endpoint" : "{{{secrets.s3-credentials.endpoint}}}",
-                            "idle-time" : 5,
-                            "region" : "{{{secrets.s3-credentials.region}}}",
-                            "secret-key" : "{{{secrets.s3-credentials.secret}}}"
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "extract-text-text-extractor-2",
-                          "name" : "Extract text",
-                          "type" : "text-extractor",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-s3-source-1",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-text-normaliser-3",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : { },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "extract-text-text-normaliser-3",
-                          "name" : "Normalise text",
-                          "type" : "text-normaliser",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-text-extractor-2",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-language-detector-4",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "make-lowercase" : true,
-                            "trim-spaces" : true
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "extract-text-language-detector-4",
-                          "name" : "Detect language",
-                          "type" : "language-detector",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-text-normaliser-3",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-text-splitter-5",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "allowedLanguages" : [ "en" ],
-                            "property" : "language"
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "extract-text-text-splitter-5",
-                          "name" : "Split into chunks",
-                          "type" : "text-splitter",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-language-detector-4",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-document-to-json-6",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "chunk_overlap" : 100,
-                            "chunk_size" : 400,
-                            "keep_separator" : false,
-                            "length_function" : "cl100k_base",
-                            "separators" : [ "\\n\\n", "\\n", " ", "" ],
-                            "splitter_type" : "RecursiveCharacterTextSplitter"
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "extract-text-document-to-json-6",
-                          "name" : "Convert to structured data",
-                          "type" : "document-to-json",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-text-splitter-5",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-compute-7",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "copy-properties" : true,
-                            "text-field" : "text"
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "extract-text-compute-7",
-                          "name" : "prepare-structure",
-                          "type" : "compute",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-document-to-json-6",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "step1",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "fields" : [ {
-                              "expression" : "properties.name",
-                              "name" : "value.filename",
-                              "type" : "STRING"
-                            }, {
-                              "expression" : "properties.chunk_id",
-                              "name" : "value.chunk_id",
-                              "type" : "STRING"
-                            }, {
-                              "expression" : "properties.language",
-                              "name" : "value.language",
-                              "type" : "STRING"
-                            }, {
-                              "expression" : "properties.chunk_num_tokens",
-                              "name" : "value.chunk_num_tokens",
-                              "type" : "STRING"
-                            } ]
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        }, {
-                          "id" : "step1",
-                          "name" : "compute-embeddings",
-                          "type" : "compute-ai-embeddings",
-                          "input" : {
-                            "connectionType" : "AGENT",
-                            "definition" : "extract-text-compute-7",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : {
-                            "connectionType" : "TOPIC",
-                            "definition" : "chunks-topic",
-                            "enableDeadletterQueue" : false
-                          },
-                          "configuration" : {
-                            "embeddings-field" : "value.embeddings_vector",
-                            "model" : "text-embedding-ada-002",
-                            "text" : "{{% value.text }}"
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        } ]
-                      }, {
-                        "id" : "write-to-astra",
-                        "module" : "default",
-                        "name" : "Write to AstraDB",
-                        "resources" : {
-                          "parallelism" : 1,
-                          "size" : 1
-                        },
-                        "errors" : {
-                          "retries" : 0,
-                          "on-failure" : "fail"
-                        },
-                        "agents" : [ {
-                          "id" : "write-to-astra-sink-1",
-                          "name" : "Write to AstraDB",
-                          "type" : "sink",
-                          "input" : {
-                            "connectionType" : "TOPIC",
-                            "definition" : "chunks-topic",
-                            "enableDeadletterQueue" : false
-                          },
-                          "output" : null,
-                          "configuration" : {
-                            "auth.password" : "{{{ secrets.cassandra.password }}}",
-                            "auth.username" : "{{{ secrets.cassandra.username }}}",
-                            "cloud.secureConnectBundle" : "{{{ secrets.cassandra.secure-connect-bundle }}}",
-                            "connector.class" : "com.datastax.oss.kafka.sink.CassandraSinkConnector",
-                            "key.converter" : "org.apache.kafka.connect.storage.StringConverter",
-                            "name" : "cassandra-sink",
-                            "topic.chunks-topic.documents.documents.mapping" : "filename=value.filename, chunk_id=value.chunk_id, language=value.language, text=value.text, embeddings_vector=value.embeddings_vector, num_tokens=value.chunk_num_tokens",
-                            "value.converter" : "org.apache.kafka.connect.storage.StringConverter"
-                          },
-                          "resources" : {
-                            "parallelism" : 1,
-                            "size" : 1
-                          },
-                          "errors" : {
-                            "retries" : 0,
-                            "on-failure" : "fail"
-                          }
-                        } ]
-                      } ],
-                      "topics" : [ {
-                        "name" : "chunks-topic",
-                        "config" : null,
-                        "options" : null,
-                        "keySchema" : null,
-                        "valueSchema" : null,
-                        "partitions" : 0,
-                        "implicit" : false,
-                        "creation-mode" : "create-if-not-exists"
-                      } ]
-                    } ],
-                    "gateways" : {
-                      "gateways" : [ {
-                        "id" : "consume-chunks",
-                        "type" : "consume",
-                        "topic" : "chunks-topic",
-                        "authentication" : null,
-                        "parameters" : null,
-                        "produceOptions" : null,
-                        "consumeOptions" : null
-                      } ]
-                    },
-                    "instance" : {
-                      "streamingCluster" : {
-                        "type" : "kafka",
-                        "configuration" : {
-                          "admin" : {
-                            "bootstrap.servers" : "my-cluster-kafka-bootstrap.kafka:9092"
-                          }
-                        }
-                      },
-                      "computeCluster" : {
-                        "type" : "kubernetes",
-                        "configuration" : { }
-                      },
-                      "globals" : null
-                    }
-                  },
-                  "status" : {
-                    "status" : {
-                      "status" : "DEPLOYED",
-                      "reason" : null
-                    },
-                    "executors" : [ {
-                      "id" : "write-to-astra-sink-1",
-                      "status" : {
-                        "status" : "DEPLOYED",
-                        "reason" : null
-                      },
-                      "replicas" : [ {
-                        "id" : "test-write-to-astra-sink-1-0",
-                        "status" : "RUNNING",
-                        "reason" : null,
-                        "agents" : [ {
-                          "agent-id" : "topic-source",
-                          "agent-type" : "topic-source",
-                          "component-type" : "SOURCE",
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194882003,
-                            "last-processed-at" : 1692200828990
-                          },
-                          "info" : {
-                            "consumer" : {
-                              "kafkaConsumerMetrics" : {
-                                "app-info[client-id=consumer-langstream-agent-write-to-astra-sink-1-1]" : {
-                                  "commit-id" : "c97b88d5db4de28d",
-                                  "start-time-ms" : 1692194882718,
-                                  "version" : "3.5.0"
-                                },
-                                "consumer-coordinator-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1]" : {
-                                  "assigned-partitions" : 1.0,
-                                  "commit-latency-avg" : "NaN",
-                                  "commit-latency-max" : "NaN",
-                                  "commit-rate" : 0.0,
-                                  "commit-total" : 0.0,
-                                  "failed-rebalance-rate-per-hour" : 0.0,
-                                  "failed-rebalance-total" : 1.0,
-                                  "heartbeat-rate" : 0.34097108565193673,
-                                  "heartbeat-response-time-max" : 5.0,
-                                  "heartbeat-total" : 1976.0,
-                                  "join-rate" : 0.0,
-                                  "join-time-avg" : "NaN",
-                                  "join-time-max" : "NaN",
-                                  "join-total" : 1.0,
-                                  "last-heartbeat-seconds-ago" : 1.0,
-                                  "last-rebalance-seconds-ago" : 5935.0,
-                                  "partition-assigned-latency-avg" : "NaN",
-                                  "partition-assigned-latency-max" : "NaN",
-                                  "partition-lost-latency-avg" : "NaN",
-                                  "partition-lost-latency-max" : "NaN",
-                                  "partition-revoked-latency-avg" : "NaN",
-                                  "partition-revoked-latency-max" : "NaN",
-                                  "rebalance-latency-avg" : "NaN",
-                                  "rebalance-latency-max" : "NaN",
-                                  "rebalance-latency-total" : 3066.0,
-                                  "rebalance-rate-per-hour" : 0.0,
-                                  "rebalance-total" : 1.0,
-                                  "sync-rate" : 0.0,
-                                  "sync-time-avg" : "NaN",
-                                  "sync-time-max" : "NaN",
-                                  "sync-total" : 1.0
-                                },
-                                "consumer-fetch-manager-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1,topic=chunks-topic,partition=0]" : {
-                                  "preferred-read-replica" : -1,
-                                  "records-lag" : 0.0,
-                                  "records-lag-avg" : "NaN",
-                                  "records-lag-max" : "NaN",
-                                  "records-lead" : 0.0,
-                                  "records-lead-avg" : "NaN",
-                                  "records-lead-min" : "NaN"
-                                },
-                                "consumer-fetch-manager-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1,topic=chunks-topic]" : {
-                                  "bytes-consumed-rate" : 0.0,
-                                  "bytes-consumed-total" : 0.0,
-                                  "fetch-size-avg" : "NaN",
-                                  "fetch-size-max" : "NaN",
-                                  "records-consumed-rate" : 0.0,
-                                  "records-consumed-total" : 0.0,
-                                  "records-per-request-avg" : "NaN"
-                                },
-                                "consumer-fetch-manager-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1]" : {
-                                  "bytes-consumed-rate" : 0.0,
-                                  "bytes-consumed-total" : 0.0,
-                                  "fetch-latency-avg" : 503.57798165137615,
-                                  "fetch-latency-max" : 533.0,
-                                  "fetch-rate" : 1.9975809111901184,
-                                  "fetch-size-avg" : "NaN",
-                                  "fetch-size-max" : "NaN",
-                                  "fetch-throttle-time-avg" : 0.0,
-                                  "fetch-throttle-time-max" : 0.0,
-                                  "fetch-total" : 11740.0,
-                                  "records-consumed-rate" : 0.0,
-                                  "records-consumed-total" : 0.0,
-                                  "records-lag-max" : "NaN",
-                                  "records-lead-min" : "NaN",
-                                  "records-per-request-avg" : "NaN"
-                                },
-                                "consumer-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1]" : {
-                                  "commit-sync-time-ns-total" : 0.0,
-                                  "committed-time-ns-total" : 0.0,
-                                  "connection-close-rate" : 0.0,
-                                  "connection-close-total" : 1.0,
-                                  "connection-count" : 2.0,
-                                  "connection-creation-rate" : 0.0,
-                                  "connection-creation-total" : 3.0,
-                                  "failed-authentication-rate" : 0.0,
-                                  "failed-authentication-total" : 0.0,
-                                  "failed-reauthentication-rate" : 0.0,
-                                  "failed-reauthentication-total" : 0.0,
-                                  "incoming-byte-rate" : 47.42197964773386,
-                                  "incoming-byte-total" : 283708.0,
-                                  "io-ratio" : 8.506736056114945E-4,
-                                  "io-time-ns-avg" : 79427.15492957746,
-                                  "io-time-ns-total" : 6.782935772E9,
-                                  "io-wait-ratio" : 0.9947785247954143,
-                                  "io-wait-time-ns-avg" : 9.288219064084508E7,
-                                  "io-wait-time-ns-total" : 5.904977084387E12,
-                                  "io-waittime-total" : 5.904977084387E12,
-                                  "iotime-total" : 6.782935772E9,
-                                  "last-poll-seconds-ago" : 0.0,
-                                  "network-io-rate" : 4.641421859964907,
-                                  "network-io-total" : 27491.0,
-                                  "outgoing-byte-rate" : 221.88260598856627,
-                                  "outgoing-byte-total" : 1311837.0,
-                                  "poll-idle-ratio-avg" : 0.49997226986885257,
-                                  "reauthentication-latency-avg" : "NaN",
-                                  "reauthentication-latency-max" : "NaN",
-                                  "request-rate" : 2.3207109299824533,
-                                  "request-size-avg" : 95.60975609756098,
-                                  "request-size-max" : 175.0,
-                                  "request-total" : 13746.0,
-                                  "response-rate" : 2.3391111377676483,
-                                  "response-total" : 13745.0,
-                                  "select-rate" : 10.710110495154053,
-                                  "select-total" : 58528.0,
-                                  "successful-authentication-no-reauth-total" : 0.0,
-                                  "successful-authentication-rate" : 0.0,
-                                  "successful-authentication-total" : 0.0,
-                                  "successful-reauthentication-rate" : 0.0,
-                                  "successful-reauthentication-total" : 0.0,
-                                  "time-between-poll-avg" : 1001.8695652173913,
-                                  "time-between-poll-max" : 1019.0
-                                },
-                                "consumer-node-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1,node-id=node--1]" : {
-                                  "incoming-byte-rate" : 0.0,
-                                  "incoming-byte-total" : 730.0,
-                                  "outgoing-byte-rate" : 0.0,
-                                  "outgoing-byte-total" : 265.0,
-                                  "request-latency-avg" : "NaN",
-                                  "request-latency-max" : "NaN",
-                                  "request-rate" : 0.0,
-                                  "request-size-avg" : "NaN",
-                                  "request-size-max" : "NaN",
-                                  "request-total" : 3.0,
-                                  "response-rate" : 0.0,
-                                  "response-total" : 3.0
-                                },
-                                "consumer-node-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1,node-id=node-0]" : {
-                                  "incoming-byte-rate" : 41.95150559903231,
-                                  "incoming-byte-total" : 250347.0,
-                                  "outgoing-byte-rate" : 163.80343587694765,
-                                  "outgoing-byte-total" : 964720.0,
-                                  "request-latency-avg" : "NaN",
-                                  "request-latency-max" : "NaN",
-                                  "request-rate" : 1.9976028765481422,
-                                  "request-size-avg" : 82.0,
-                                  "request-size-max" : 82.0,
-                                  "request-total" : 11762.0,
-                                  "response-rate" : 1.9976175203885276,
-                                  "response-total" : 11761.0
-                                },
-                                "consumer-node-metrics[client-id=consumer-langstream-agent-write-to-astra-sink-1-1,node-id=node-2147483647]" : {
-                                  "incoming-byte-rate" : 5.440870539286286,
-                                  "incoming-byte-total" : 32631.0,
-                                  "outgoing-byte-rate" : 59.432840889794534,
-                                  "outgoing-byte-total" : 346852.0,
-                                  "request-latency-avg" : "NaN",
-                                  "request-latency-max" : "NaN",
-                                  "request-rate" : 0.33961623365596877,
-                                  "request-size-avg" : 175.0,
-                                  "request-size-max" : 175.0,
-                                  "request-total" : 1981.0,
-                                  "response-rate" : 0.3400544087053929,
-                                  "response-total" : 1981.0
-                                },
-                                "kafka-metrics-count[client-id=consumer-langstream-agent-write-to-astra-sink-1-1]" : {
-                                  "count" : 144.0
-                                }
-                              }
-                            },
-                            "topic" : "chunks-topic"
-                          }
-                        }, {
-                          "agent-id" : "write-to-astra-sink-1",
-                          "agent-type" : "sink",
-                          "component-type" : "SINK",
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194881424,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "connector.class" : "com.datastax.oss.kafka.sink.CassandraSinkConnector"
-                          }
-                        } ]
-                      } ]
-                    }, {
-                      "id" : "extract-text-s3-source-1",
-                      "status" : {
-                        "status" : "DEPLOYED",
-                        "reason" : null
-                      },
-                      "replicas" : [ {
-                        "id" : "test-extract-text-s3-source-1-0",
-                        "status" : "RUNNING",
-                        "reason" : null,
-                        "agents" : [ {
-                          "agent-id" : "extract-text-s3-source-1",
-                          "agent-type" : "s3-source",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "bucketName" : "enrico-dev"
-                          }
-                        }, {
-                          "agent-id" : "extract-text-text-extractor-2",
-                          "agent-type" : "text-extractor",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "extract-text-text-normaliser-3",
-                          "agent-type" : "text-normaliser",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "extract-text-language-detector-4",
-                          "agent-type" : "language-detector",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "extract-text-text-splitter-5",
-                          "agent-type" : "text-splitter",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "extract-text-document-to-json-6",
-                          "agent-type" : "document-to-json",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "extract-text-compute-7",
-                          "agent-type" : "compute",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "step1",
-                          "agent-type" : "compute-ai-embeddings",
-                          "component-type" : null,
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194873570,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "errors" : 0
-                          }
-                        }, {
-                          "agent-id" : "topic-sink",
-                          "agent-type" : "topic-sink",
-                          "component-type" : "SINK",
-                          "metrics" : {
-                            "total-in" : 0,
-                            "total-out" : 0,
-                            "started-at" : 1692194879717,
-                            "last-processed-at" : 0
-                          },
-                          "info" : {
-                            "producer" : {
-                              "kafkaProducerMetrics" : {
-                                "app-info[client-id=producer-1]" : {
-                                  "commit-id" : "c97b88d5db4de28d",
-                                  "start-time-ms" : 1692194885294,
-                                  "version" : "3.5.0"
-                                },
-                                "kafka-metrics-count[client-id=producer-1]" : {
-                                  "count" : 103.0
-                                },
-                                "producer-metrics[client-id=producer-1]" : {
-                                  "batch-size-avg" : "NaN",
-                                  "batch-size-max" : "NaN",
-                                  "batch-split-rate" : 0.0,
-                                  "batch-split-total" : 0.0,
-                                  "buffer-available-bytes" : 3.3554432E7,
-                                  "buffer-exhausted-rate" : 0.0,
-                                  "buffer-exhausted-total" : 0.0,
-                                  "buffer-total-bytes" : 3.3554432E7,
-                                  "bufferpool-wait-ratio" : 0.0,
-                                  "bufferpool-wait-time-ns-total" : 0.0,
-                                  "bufferpool-wait-time-total" : 0.0,
-                                  "compression-rate-avg" : "NaN",
-                                  "connection-close-rate" : 0.0,
-                                  "connection-close-total" : 1.0,
-                                  "connection-count" : 1.0,
-                                  "connection-creation-rate" : 0.0,
-                                  "connection-creation-total" : 2.0,
-                                  "failed-authentication-rate" : 0.0,
-                                  "failed-authentication-total" : 0.0,
-                                  "failed-reauthentication-rate" : 0.0,
-                                  "failed-reauthentication-total" : 0.0,
-                                  "flush-time-ns-total" : 0.0,
-                                  "incoming-byte-rate" : 2.8013404544978533,
-                                  "incoming-byte-total" : 3165.0,
-                                  "io-ratio" : 1.24278129657228E-4,
-                                  "io-time-ns-avg" : 1000687.5,
-                                  "io-time-ns-total" : 1.28880366E8,
-                                  "io-wait-ratio" : 1.8557742784935887,
-                                  "io-wait-time-ns-avg" : 1.4943158434E10,
-                                  "io-wait-time-ns-total" : 5.940378844624E12,
-                                  "io-waittime-total" : 5.940378844624E12,
-                                  "iotime-total" : 1.28880366E8,
-                                  "metadata-age" : 2.432,
-                                  "metadata-wait-time-ns-total" : 0.0,
-                                  "network-io-rate" : 0.052361503822389785,
-                                  "network-io-total" : 48.0,
-                                  "outgoing-byte-rate" : 0.7592418054246518,
-                                  "outgoing-byte-total" : 750.0,
-                                  "produce-throttle-time-avg" : 0.0,
-                                  "produce-throttle-time-max" : 0.0,
-                                  "reauthentication-latency-avg" : "NaN",
-                                  "reauthentication-latency-max" : "NaN",
-                                  "record-error-rate" : 0.0,
-                                  "record-error-total" : 0.0,
-                                  "record-queue-time-avg" : "NaN",
-                                  "record-queue-time-max" : "NaN",
-                                  "record-retry-rate" : 0.0,
-                                  "record-retry-total" : 0.0,
-                                  "record-send-rate" : 0.0,
-                                  "record-send-total" : 0.0,
-                                  "record-size-avg" : "NaN",
-                                  "record-size-max" : "NaN",
-                                  "records-per-request-avg" : "NaN",
-                                  "request-latency-avg" : "NaN",
-                                  "request-latency-max" : "NaN",
-                                  "request-rate" : 0.026180751911194892,
-                                  "request-size-avg" : 29.0,
-                                  "request-size-max" : 29.0,
-                                  "request-total" : 24.0,
-                                  "requests-in-flight" : 0.0,
-                                  "response-rate" : 0.026180751911194892,
-                                  "response-total" : 24.0,
-                                  "select-rate" : 0.12418889130367287,
-                                  "select-total" : 248.0,
-                                  "successful-authentication-no-reauth-total" : 0.0,
-                                  "successful-authentication-rate" : 0.0,
-                                  "successful-authentication-total" : 0.0,
-                                  "successful-reauthentication-rate" : 0.0,
-                                  "successful-reauthentication-total" : 0.0,
-                                  "txn-abort-time-ns-total" : 0.0,
-                                  "txn-begin-time-ns-total" : 0.0,
-                                  "txn-commit-time-ns-total" : 0.0,
-                                  "txn-init-time-ns-total" : 0.0,
-                                  "txn-send-offsets-time-ns-total" : 0.0,
-                                  "waiting-threads" : 0.0
-                                },
-                                "producer-node-metrics[client-id=producer-1,node-id=node--1]" : {
-                                  "incoming-byte-rate" : 0.0,
-                                  "incoming-byte-total" : 579.0,
-                                  "outgoing-byte-rate" : 0.0,
-                                  "outgoing-byte-total" : 120.0,
-                                  "request-latency-avg" : "NaN",
-                                  "request-latency-max" : "NaN",
-                                  "request-rate" : 0.0,
-                                  "request-size-avg" : "NaN",
-                                  "request-size-max" : "NaN",
-                                  "request-total" : 3.0,
-                                  "response-rate" : 0.0,
-                                  "response-total" : 3.0
-                                },
-                                "producer-node-metrics[client-id=producer-1,node-id=node-0]" : {
-                                  "incoming-byte-rate" : 2.8013404544978533,
-                                  "incoming-byte-total" : 2586.0,
-                                  "outgoing-byte-rate" : 0.7592418054246518,
-                                  "outgoing-byte-total" : 630.0,
-                                  "request-latency-avg" : "NaN",
-                                  "request-latency-max" : "NaN",
-                                  "request-rate" : 0.026180751911194892,
-                                  "request-size-avg" : 29.0,
-                                  "request-size-max" : 29.0,
-                                  "request-total" : 21.0,
-                                  "response-rate" : 0.026180751911194892,
-                                  "response-total" : 21.0
-                                }
-                              }
-                            },
-                            "topic" : "chunks-topic"
-                          }
-                        } ]
-                      } ]
-                    } ]
-                  }
-                }
-                """;
+                new String(
+                        AppsCmdTest.class
+                                .getClassLoader()
+                                .getResourceAsStream("expected-get.json")
+                                .readAllBytes(),
+                        StandardCharsets.UTF_8);
         wireMock.register(
-                WireMock.get("/api/applications/%s/my-app?stats=false".formatted(TENANT))
+                WireMock.get(String.format("/api/applications/%s/my-app?stats=false", TENANT))
                         .willReturn(WireMock.ok(jsonValue)));
 
         CommandResult result = executeCommand("apps", "get", "my-app");
         Assertions.assertEquals(0, result.exitCode());
         Assertions.assertEquals("", result.err());
         Assertions.assertEquals(
-                """
-                        ID          STREAMING   COMPUTE     STATUS      EXECUTORS   REPLICAS \s
-                        test        kafka       kubernetes  DEPLOYED    2/2         2/2""",
+                "ID          STREAMING   COMPUTE     STATUS      EXECUTORS   REPLICAS  \n"
+                        + "test        kafka       kubernetes  DEPLOYED    2/2         2/2",
                 result.out());
         ObjectMapper jsonPrinter =
                 new ObjectMapper()
@@ -1086,7 +296,7 @@ class AppsCmdTest extends CommandTestBase {
     @Test
     public void testDelete() {
         wireMock.register(
-                WireMock.delete("/api/applications/%s/my-app".formatted(TENANT))
+                WireMock.delete(String.format("/api/applications/%s/my-app", TENANT))
                         .willReturn(WireMock.ok()));
 
         CommandResult result = executeCommand("apps", "delete", "my-app");
@@ -1098,7 +308,7 @@ class AppsCmdTest extends CommandTestBase {
     @Test
     public void testList() {
         wireMock.register(
-                WireMock.get("/api/applications/%s".formatted(TENANT))
+                WireMock.get(String.format("/api/applications/%s", TENANT))
                         .willReturn(WireMock.ok("[]")));
 
         CommandResult result = executeCommand("apps", "list");
@@ -1119,7 +329,7 @@ class AppsCmdTest extends CommandTestBase {
     @Test
     public void testLogs() {
         wireMock.register(
-                WireMock.get("/api/applications/%s/my-app/logs".formatted(TENANT))
+                WireMock.get(String.format("/api/applications/%s/my-app/logs", TENANT))
                         .willReturn(WireMock.ok()));
 
         CommandResult result = executeCommand("apps", "logs", "my-app");
@@ -1131,10 +341,10 @@ class AppsCmdTest extends CommandTestBase {
     @Test
     public void testDownload() {
         wireMock.register(
-                WireMock.get("/api/applications/%s/my-app/code".formatted(TENANT))
+                WireMock.get(String.format("/api/applications/%s/my-app/code", TENANT))
                         .willReturn(WireMock.ok()));
 
-        final File expectedFile = new File("%s-my-app.zip".formatted(TENANT));
+        final File expectedFile = new File(String.format("%s-my-app.zip", TENANT));
         try {
             CommandResult result = executeCommand("apps", "download", "my-app");
             Assertions.assertEquals(0, result.exitCode());
@@ -1153,7 +363,7 @@ class AppsCmdTest extends CommandTestBase {
     @Test
     public void testDownloadToFile() {
         wireMock.register(
-                WireMock.get("/api/applications/%s/my-app/code".formatted(TENANT))
+                WireMock.get(String.format("/api/applications/%s/my-app/code", TENANT))
                         .willReturn(WireMock.ok()));
 
         CommandResult result =
@@ -1173,24 +383,23 @@ class AppsCmdTest extends CommandTestBase {
 
         final String secrets =
                 createTempFile(
-                        """
-                                             secrets:
-                                                  - name: vertex-ai
-                                                    id: vertex-ai
-                                                    data:
-                                                      url: https://us-central1-aiplatform.googleapis.com
-                                                      token: xxx
-                                                      serviceAccountJson: "<file:%s>"
-                                                      region: us-central1
-                                                      project: myproject
-                                             """
-                                .formatted(jsonFileRelative));
+                        String.format(
+                                ("secrets:\n"
+                                        + "     - name: vertex-ai\n"
+                                        + "       id: vertex-ai\n"
+                                        + "       data:\n"
+                                        + "         url: https://us-central1-aiplatform.googleapis.com\n"
+                                        + "         token: xxx\n"
+                                        + "         serviceAccountJson: \"<file:%s>\"\n"
+                                        + "         region: us-central1\n"
+                                        + "         project: myproject\n"),
+                                jsonFileRelative));
 
         final Path zipFile =
                 AbstractDeployApplicationCmd.buildZip(langstream.toFile(), System.out::println);
 
         wireMock.register(
-                WireMock.post("/api/applications/%s/my-app".formatted(TENANT))
+                WireMock.post(String.format("/api/applications/%s/my-app", TENANT))
                         .withMultipartRequestBody(
                                 aMultipart("app")
                                         .withBody(binaryEqualTo(Files.readAllBytes(zipFile))))
@@ -1200,18 +409,16 @@ class AppsCmdTest extends CommandTestBase {
                                 aMultipart("secrets")
                                         .withBody(
                                                 equalTo(
-                                                        """
-                                       ---
-                                       secrets:
-                                       - name: "vertex-ai"
-                                         id: "vertex-ai"
-                                         data:
-                                           url: "https://us-central1-aiplatform.googleapis.com"
-                                           token: "xxx"
-                                           serviceAccountJson: "{\\"client-id\\":\\"xxx\\"}"
-                                           region: "us-central1"
-                                           project: "myproject"
-                                        """)))
+                                                        "---\n"
+                                                                + "secrets:\n"
+                                                                + "- name: \"vertex-ai\"\n"
+                                                                + "  id: \"vertex-ai\"\n"
+                                                                + "  data:\n"
+                                                                + "    url: \"https://us-central1-aiplatform.googleapis.com\"\n"
+                                                                + "    token: \"xxx\"\n"
+                                                                + "    serviceAccountJson: \"{\\\"client-id\\\":\\\"xxx\\\"}\"\n"
+                                                                + "    region: \"us-central1\"\n"
+                                                                + "    project: \"myproject\"\n")))
                         .willReturn(WireMock.ok("{ \"name\": \"my-app\" }")));
 
         CommandResult result =
